--- a/pertemuan11/pertemuan11a/app/build.gradle
+++ b/pertemuan11/pertemuan11a/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.pertemuan10b"
+        applicationId "com.example.pertemuan11a"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
