--- a/pertemuan13/Proyek2/app/src/main/AndroidManifest.xml
+++ b/pertemuan13/Proyek2/app/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="kominfo.go.id.storage.proyek2">
+    package="kominfo.go.id.storage.proyek2">
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"/>
+        android:theme="@style/AppTheme">
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SplashScreen" />
+    </application>
+
 </manifest>
